Changelog
=========



3.2.1 (unreleased)
------------------

- Adjust javascript to fix plone 4.1 and 4.2 compatibility.
  [phgross]

- Make favourite Portlet filterable.
  [Kevin Bieri]


3.2.0 (2014-12-16)
------------------

- Rename favourites on the dashboard.
  [mbaechtold]


3.1.2 (2014-07-11)
------------------

- Make sure that the delete icon has enough space.
  [tschanzt]


3.1.1 (2013-08-15)
------------------

- Do not use move cursor on empty favourite items.
  [Julian Infanger]

- Fixed link creation for users without `Modify portal content` permission
  on the favouritefolder.
  [phgross]


3.1 (2013-04-16)
----------------

- Added Migration Upgradestep for old favourite portlets to the new implementation (3.0).
  [phgross]

- Fixed UnicodeEncodeError in AddFavourite, wich happens when
  adding a Dexterity item with a non-ascii title to the Favourites.
  [phgross]

- Replace jq by $.
  [mathias.leimgruber]

- Updated German translations.
  [phabegger]


3.0 (2013-01-25)
----------------

- Full refactored. Favourites full configurable over the portlet.
  [eschmutz]


2.0.1 (2012-03-05)
------------------

- Added some French translations
  [ttschanz]

- Add IFavouritesLocation adapter for customizing favourites location.
  [jone]

- Add missing german translations.
  [jone]

- Add to favourites: do not use title_or_id for dexterity support.
  [jone]

- Translate portlet title in "plone" domain.
  [jone]

- Fix messages in "add to favourites" script, so that translations work.
  [jone]

- Added some missing german translations.
  [jone]


2.0 (2010-10-26)
----------------

- Only plone4 compatible

- fixed namespaces in setup.py
  [phgross]

- added the addToFavorites script (use now links and no more the depracted
  favorite type), and to some other changes for plone4 support
  [phgross]

- removed inline css on portlet
  [fsprenger]

- added new, removed unused translations
  [phgross]


1.1
---
